--- a/create.html
+++ b/create.html
@@ -6,41 +6,31 @@
   </head>
   <body>
     <h1>Criação de Postagem</h1>
-    <form action="#" method="post">
-      <input
-        type="text"
-        id="titulo"
-        name="titulo"
-        placeholder="Título da postagem"
-      />
-      <input
-        type="text"
-        id="conteudo"
-        name="conteudo"
-        placeholder="Conteúdo da postagem"
-      />
+    <form action="http://localhost:5000/postagens" method="post">
+      <input type="text" name="titulo" placeholder="Título da postagem" />
+      <input type="text" name="conteudo" placeholder="Conteúdo da postagem" />
       <input type="submit" value="Criar" />
     </form>
-    <script>
-      const form = document.querySelector("#form-post");
-      form.addEventListener("submit", (event) => {
-        event.preventDefault();
-        const titulo = document.querySelector("#titulo").value;
-        const conteudo = document.querySelector("#conteudo").value;
 
-        fetch("/postagens", {
+    <script>
+      async function createPost() {
+        const title = document.getElementById("title").value;
+        const content = document.getElementById("content").value;
+
+        const response = await fetch("http://localhost:5000/postagens", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
           },
-          body: JSON.stringify({ titulo, conteudo }),
-        })
-          .then((response) => response.json())
-          .then((data) => {
-            console.log(data.message);
-            form.reset();
-          });
-      });
+          body: JSON.stringify({ title, content }),
+        });
+
+        if (response.ok) {
+          alert("Postagem criada com sucesso!");
+        } else {
+          alert("Erro ao criar postagem.");
+        }
+      }
     </script>
   </body>
 </html>
