--- a/index.html
+++ b/index.html
@@ -1,33 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <script>
-      const form = document.querySelector("form");
-      const inputTitle = document.querySelector("#inputTitle");
-      const inputBody = document.querySelector("#inputBody");
-
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-
-        const post = {
-          title: inputTitle.value,
-          body: inputBody.value,
-        };
-
-        console.log(post);
-      });
-    </script>
+    <meta charset="utf-8" />
+    <title>Login</title>
   </head>
   <body>
-    <form>
-      <div>
-        <label for="inputTitle">Título:</label>
-        <input type="text" id="inputTitle" />
-      </div>
-      <div>
-        <label for="inputBody">Conteúdo:</label>
-        <textarea id="inputBody"></textarea>
-      </div>
-      <button type="submit">Salvar</button>
+    <h1>Login</h1>
+    <form action="#" method="post">
+      <input type="text" id="email" name="email" placeholder="E-mail" />
+      <input type="password" id="senha" name="senha" placeholder="Senha" />
+      <input type="submit" value="Entrar" />
     </form>
+    <p>Ainda não tem uma conta? <a href="criar_conta.html">Criar Conta</a></p>
   </body>
 </html>
