--- a/criar_conta.html
+++ b/criar_conta.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Criação de Postagem</title>
-  </head>
-  <body>
-    <h1>Criação de Postagem</h1>
-    <form action="http://localhost:5000/postagens" method="post">
-      <input type="text" name="titulo" placeholder="Título da postagem" />
-      <input type="text" name="conteudo" placeholder="Conteúdo da postagem" />
-      <input type="submit" value="Criar" />
-    </form>
-
     <script>
-      async function createPost() {
-        const title = document.getElementById("title").value;
-        const content = document.getElementById("content").value;
+      const form = document.querySelector("form");
+      const emailInput = document.querySelector("#email");
+      const passwordInput = document.querySelector("#password");
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
 
-        const response = await fetch("http://localhost:5000/postagens", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({ title, content }),
-        });
+        const email = emailInput.value;
+        const password = passwordInput.value;
 
-        if (response.ok) {
-          alert("Postagem criada com sucesso!");
-        } else {
-          alert("Erro ao criar postagem.");
-        }
-      }
+        console.log(`Email: ${email}, Senha: ${password}`);
+      });
     </script>
-  </body>
+  </head>
+</html>
+
+</head>
+<body>
+  <h1>Criação de conta</h1>
+  <form>
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" id="email" />
+    </div>
+    <div>
+      <label for="password">Senha:</label>
+      <input type="password" id="password" />
+    </div>
+    <button type="submit">Criar conta</button>
+  </form>
+</body>
 </html>
