--- a/criar_conta.html
+++ b/criar_conta.html
@@ -11,7 +11,22 @@
         const email = emailInput.value;
         const password = passwordInput.value;
 
-        console.log(`Email: ${email}, Senha: ${password}`);
+        const data = { email, password };
+
+        fetch("http://localhost:5000/usuarios", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(data),
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            console.log(data);
+          })
+          .catch((error) => {
+            console.error(error);
+          });
       });
     </script>
   </head>
