--- a/criar_conta.html
+++ b/criar_conta.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
-      const form = document.querySelector("form");
-      const emailInput = document.querySelector("#email");
-      const passwordInput = document.querySelector("#password");
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
+    <meta charset="utf-8" />
+    <title>Criação de conta</title>
+  </head>
+  <body>
+    <h1>Criação de conta</h1>
+    <form id="form-create-account">
+      <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" />
+      </div>
+      <div>
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha" name="senha" />
+      </div>
+      <button type="submit">Criar conta</button>
+    </form>
 
-        const email = emailInput.value;
-        const password = passwordInput.value;
+    <script>
+      const form = document.querySelector("#form-create-account");
+
+      form.addEventListener("submit", (event) => {
+        event.preventDefault();
+
+        const email = form.elements.email.value;
+        const password = form.elements.password.value;
 
         const data = { email, password };
 
@@ -29,22 +45,5 @@
           });
       });
     </script>
-  </head>
-</html>
-
-</head>
-<body>
-  <h1>Criação de conta</h1>
-  <form>
-    <div>
-      <label for="email">Email:</label>
-      <input type="email" id="email" />
-    </div>
-    <div>
-      <label for="password">Senha:</label>
-      <input type="password" id="password" />
-    </div>
-    <button type="submit">Criar conta</button>
-  </form>
-</body>
+  </body>
 </html>
