--- a/criar_conta.html
+++ b/criar_conta.html
@@ -12,8 +12,8 @@
         <input type="email" id="email" name="email" />
       </div>
       <div>
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="senha" />
+        <label for="password">Senha:</label>
+        <input type="password" id="senha" name="password" />
       </div>
       <button type="submit">Criar conta</button>
     </form>
