--- a/login.html
+++ b/login.html
@@ -1,31 +1,30 @@
-<html>
-  <head>
-    <script>
-      const form = document.querySelector("form");
-      const emailInput = document.querySelector("#email");
-      const passwordInput = document.querySelector("#password");
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8" />
+  <title>Login</title>
+</head>
+<body>
+  <h1>Login</h1>
+  <form id="form-login">
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" />
+    </div>
+    <div>
+      <label for="password">Senha:</label>
+      <input type="password" id="password" name="password" />
+    </div>
+    <button type="submit">Login</button>
+  </form>
 
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-
-        const email = emailInput.value;
-        const password = passwordInput.value;
-
-        console.log(`Email: ${email}, Senha: ${password}`);
-      });
-    </script>
-  </head>
-  <body>
-    <form>
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" />
-      </div>
-      <div>
-        <label for="password">Senha:</label>
-        <input type="password" id="password" />
-      </div>
-      <button type="submit">Entrar</button>
-    </form>
+   <script>
+    const form = document.getElementById("form-login");
+    form.addEventListener("submit", (event) => {
+      event.preventDefault();
+      const email = form.elements.email.value;
+      const password = form.elements.password.value;
+      console.log(email, password);
+    });
+  </script>
   </body>
 </html>
