--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Login</title>
-  </head>
-  <body>
-    <h1>Login</h1>
-    <form action="#" method="post">
-      <input type="text" id="email" name="email" placeholder="E-mail" />
-      <input type="password" id="senha" name="senha" placeholder="Senha" />
-      <input type="submit" value="Entrar" />
-    </form>
-    <p>Ainda não tem uma conta? <a href="criar_conta.html">Criar Conta</a></p>
-  </body>
-</html>
+<form id="form-login">
+  <div>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" />
+  </div>
+  <div>
+    <label for="password">Senha:</label>
+    <input type="password" id="senha" name="senha" />
+  </div>
+  <button type="submit">Login</button>
+</form>
