--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<form id="form-login">
-  <div>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" />
-  </div>
-  <div>
-    <label for="password">Senha:</label>
-    <input type="password" id="senha" name="senha" />
-  </div>
-  <button type="submit">Login</button>
-</form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Login</title>
+  </head>
+  <body>
+    <h1>Login</h1>
+    <form id="form-login">
+      <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" />
+      </div>
+      <div>
+        <label for="password">Senha:</label>
+        <input type="password" id="senha" name="senha" />
+      </div>
+      <button type="submit">Login</button>
+    </form>
+  </body>
+</html>
