--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Login</h1>
-    <form id="form-login">
+    <form id="form-login" action="/login" method="post">
       <div>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" />
