--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="application/json" />
+
     <title>Login</title>
   </head>
+
   <body>
     <h1>Login</h1>
     <form id="form-login" action="/login" method="post">
@@ -13,7 +16,7 @@
       </div>
       <div>
         <label for="password">Senha:</label>
-        <input type="password" id="senha" name="senha" />
+        <input type="password" id="password" name="password" />
       </div>
       <button type="submit">Login</button>
     </form>
